--- a/index.html
+++ b/index.html
@@ -1,65 +1,145 @@
-index.html  <!DOCTYPE html>
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-<title>Buyer Journey Decision Tree</title>
-<style>
-body{font-family:system-ui;background:#f5f7fa;padding:30px}
-.container{max-width:1000px;margin:0 auto}
-h1{text-align:center;color:#1a1a2e}
-.card{background:white;border-radius:12px;padding:20px;margin:20px 0;box-shadow:0 2px 8px rgba(0,0,0,0.1)}
-table{width:100%;border-collapse:collapse}
-th,td{padding:10px;border:1px solid #ddd;text-align:left}
-th{background:#f5f5f5}
-.rl1{background:#c8e6c9}
-.rl2{background:#fff3e0}
-.rl3{background:#e3f2fd}
-.grid{display:grid;grid-template-columns:1fr 1fr 1fr;gap:16px}
-.seq{padding:16px;border-radius:8px}
-</style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Unified Customer Journey Map</title>
+    <script src="https://cdn.jsdelivr.net/npm/mermaid@10/dist/mermaid.min.js"></script>
+    <style>
+        * { margin: 0; padding: 0; box-sizing: border-box; }
+        body {
+            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
+            background: #f5f7fa;
+            min-height: 100vh;
+            padding: 30px;
+        }
+        .container { max-width: 1200px; margin: 0 auto; }
+        h1 { color: #1a1a2e; text-align: center; margin-bottom: 8px; }
+        .subtitle { color: #666; text-align: center; margin-bottom: 30px; }
+        .card {
+            background: white;
+            border-radius: 12px;
+            box-shadow: 0 2px 12px rgba(0,0,0,0.08);
+            padding: 30px;
+            margin-bottom: 24px;
+        }
+        .card h2 {
+            color: #1a1a2e;
+            margin-bottom: 20px;
+            font-size: 1.25rem;
+        }
+        .mermaid { text-align: center; }
+
+        .framework-grid {
+            display: grid;
+            grid-template-columns: 1fr 1fr 1fr;
+            gap: 20px;
+            margin-bottom: 24px;
+        }
+        .framework-box {
+            padding: 20px;
+            border-radius: 12px;
+            text-align: center;
+        }
+        .framework-box h3 { margin-bottom: 12px; }
+        .framework-box p { font-size: 0.9rem; color: #666; margin-bottom: 12px; }
+        .framework-box ul { text-align: left; margin-left: 20px; font-size: 0.85rem; }
+
+        .journey-table {
+            width: 100%;
+            border-collapse: collapse;
+            font-size: 0.9rem;
+        }
+        .journey-table th, .journey-table td {
+            padding: 12px 16px;
+            text-align: left;
+            border: 1px solid #e0e0e0;
+        }
+        .journey-table th { background: #f8f9fa; font-weight: 600; }
+        .journey-table .stage-header {
+            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            color: white;
+            font-weight: 600;
+        }
+
+        .status-inactive { background: #ffcdd2; }
+        .status-engaged { background: #b2ebf2; }
+        .status-active { background: #c8e6c9; }
+        .status-opp { background: #fff9c4; }
+        .status-customer { background: #ffcc80; }
+        .status-nurture { background: #e1bee7; }
+
+        .rl1 { background: #c8e6c9; }
+        .rl2 { background: #fff3e0; }
+        .rl3 { background: #e3f2fd; }
+
+        .tool-unify { color: #1565c0; font-weight: 600; }
+        .tool-outreach { color: #2e7d32; font-weight: 600; }
+        .tool-marketo { color: #7b1fa2; font-weight: 600; }
+
+        .legend {
+            display: flex;
+            gap: 24px;
+            flex-wrap: wrap;
+            margin-top: 16px;
+            padding: 16px;
+            background: #f5f5f5;
+            border-radius: 8px;
+        }
+        .legend-item {
+            display: flex;
+            align-items: center;
+            gap: 8px;
+            font-size: 0.85rem;
+        }
+        .legend-color {
+            width: 20px;
+            height: 20px;
+            border-radius: 4px;
+        }
+
+        .question-box {
+            background: #e3f2fd;
+            border-left: 4px solid #2196f3;
+            padding: 16px;
+            margin-top: 16px;
+            border-radius: 0 8px 8px 0;
+        }
+    </style>
 </head>
 <body>
-<div class="container">
-<h1>Buyer Journey Decision Tree</h1>
+    <div class="container">
+        <h1>Unified Customer Journey Map</h1>
+        <p class="subtitle">Mapping Account Status + Readiness Level + Contact Status â Tool & Content Selection</p>
 
+<!-- The Three Frameworks -->
 <div class="card">
-<h2>1. Entry Points</h2>
-<table>
-<tr><th>Entry Point</th><th>Trigger</th><th>Default RL</th><th>Action</th></tr>
-<tr><td>New TAL Account</td><td>Account added to TAL</td><td class="rl3">RL3</td><td>Unify runs RL3 sequence</td></tr>
-<tr><td>Event Attendee</td><td>Registered for event</td><td>Check RL</td><td>Event-specific sequence by RL</td></tr>
-<tr><td>High-Value Page</td><td>Visits pricing/demo</td><td class="rl1">RL1</td><td>Upgrade to RL1, high-intent sequence</td></tr>
-</table>
+    <h2>The Three Frameworks</h2>
+    <div class="framework-grid">
+        <div class="framework-box" style="background: linear-gradient(135deg, #e8f5e9 0%, #c8e6c9 100%); border: 2px solid #4caf50;">
+            <h3>Account Status</h3>
+            <p><strong>"Who should we target?"</strong></p>
+            <p>Account-level. Where is this account in their journey?</p>
+            <ul><li>Inactive</li><li>Engaged</li><li>Active Outreach</li><li>Open Opportunity</li><li>Customer</li></ul>
+        </div>
+        <div class="framework-box" style="background: linear-gradient(135deg, #e3f2fd 0%, #bbdefb 100%); border: 2px solid #2196f3;">
+            <h3>Readiness Level</h3>
+            <p><strong>"How much should we invest?"</strong></p>
+            <p>Marketing segmentation. Budget & channel allocation.</p>
+            <ul><li>RL1 (Sales Ready) - HIGH</li><li>RL2 (Aware) - MEDIUM</li><li>RL3 (Unaware) - LOW</li></ul>
+        </div>
+        <div class="framework-box" style="background: linear-gradient(135deg, #fff3e0 0%, #ffe0b2 100%); border: 2px solid #ff9800;">
+            <h3>Contact Status</h3>
+            <p><strong>"What message should we send?"</strong></p>
+            <p>Person-level. How engaged is this contact?</p>
+            <ul><li>New â Prospect â MQL</li><li>Working â SQL</li><li>Customer</li><li>Nurture / Deprioritized</li></ul>
+        </div>
+    </div>
+    <div style="text-align: center; padding: 20px; background: #f5f5f5; border-radius: 8px;">
+        <strong>How they connect:</strong><br/>
+        Account Status tells us <em>where</em> they are â Readiness Level tells us <em>how much to invest</em> â Contact Status tells us <em>what to say</em>
+    </div>
 </div>
-
-<div class="card">
-<h2>2. Decision Rules</h2>
-<table>
-<tr><td><b>New TAL account</b></td><td>RL3, run awareness sequence</td></tr>
-<tr><td><b>RL3 engages</b></td><td>Upgrade to RL2</td></tr>
-<tr><td><b>RL2 high engagement</b></td><td>Check MQL, rep takes over if yes</td></tr>
-<tr><td><b>RL2 dark 90 days</b></td><td>Downgrade to RL3</td></tr>
-<tr><td><b>High-intent signal</b></td><td>RL1, meeting sequence</td></tr>
-<tr><td><b>RL1 responds</b></td><td>Rep takes over immediately</td></tr>
-<tr><td><b>MQL created</b></td><td>Rep takes over, automation stops</td></tr>
-</table>
-</div>
-
-<div class="card">
-<h2>3. Sequences by RL</h2>
-<div class="grid">
-<div class="seq rl3"><h3>RL3: Awareness</h3><p>5 touches / 6 weeks</p><ul><li>Industry benchmark</li><li>Thought leadership</li><li>Relevant news</li><li>Peer mention</li><li>Soft CTA</li></ul></div>
-<div class="seq rl2"><h3>RL2: Engagement</h3><p>6 touches / 4 weeks</p><ul><li>Activity follow-up</li><li>Case study</li><li>Playbook</li><li>Webinar</li><li>ROI angle</li><li>Soft meeting ask</li></ul></div>
-<div class="seq rl1"><h3>RL1: Meeting</h3><p>5 touches / 2 weeks</p><ul><li>Direct meeting ask</li><li>Case study + ask</li><li>ROI calculator</li><li>Peer reference</li><li>Final 15 min ask</li></ul></div>
-</div>
-</div>
-
-<div class="card" style="background:#f3e5f5">
-<h2>4. When Rep Takes Over</h2>
-<p><b>MQL Created:</b> Contact hits threshold, rep takes over in Outreach.io</p>
-<p><b>RL1 Response:</b> Any response from high-intent account, rep jumps in immediately</p>
-<p style="margin-top:16px;padding:12px;background:#e1bee7;border-radius:8px"><b>KEY:</b> Unify handles until MQL or RL1 response. Rep only works qualified accounts.</p>
-</div>
-
 </div>
 </body>
 </html>
